# theme-generator

./: .gitignore  .gitmodules  .thiefsheets  LICENSE  README.md  meson.build
data/: io.github.thiefmd.themegenerator.appdata.xml  io.github.thiefmd.themegenerator.desktop  meson.build
debian/: changelog  control  copyright  rules
flatpak/: io.github.thiefmd.themegenerator.json
meson/: post_install.py
src/: Application.vala  Colors.vala  Constants.vala  Fountain.vala  Markdown.vala  UI.vala
vapi/: config.vapi
